--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Register & Pay</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registration & Payment</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Register & Pay</h1>
+  <div class="container">
+    <img src="logo.png" alt="Company Logo" class="logo">
+    <h1>Company Name</h1>
 
-  <!-- Registration Form -->
-  <form id="regForm" onsubmit="startPayment(event)">
-    <input type="text" placeholder="Your Name" required>
-    <input type="email" placeholder="Your Email" required>
-    <button type="submit">Proceed to Payment</button>
-  </form>
+    <form onsubmit="startPayment(event)">
+      <input type="text" id="candidateName" placeholder="Enter Candidate's Name" required>
+      <input type="password" id="candidatePassword" placeholder="Enter Exam code" required>
+      <button type="submit">Pay Now</button>
+    </form>
+  </div>
 
   <script>
     function startPayment(event) {
       event.preventDefault();
-      // Redirect directly to Razorpay payment link
       window.location.href = "https://rzp.io/l/yourpaymentlink";
     }
   </script>
 </body>
 </html>
-
